# pi-stats

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
python_script/: fan.py  getters.py  main.py
python_script/not_needed/: power.py  requirements.txt  temp.py
src/: cli.rs  command.rs  error.rs  lib.rs  main.rs  throttle.rs  utils.rs
src/platform/: command.rs  cpu.rs  fan.rs  mod.rs  power.rs
