[package]
name = "pi-stats"
version = "0.2.0"
edition = "2024"
authors = ["Alex Sokolov"]
description = "CLI tool for getting temperature, fan, power and cooling fan info from Raspberry Pi 5"
readme = "README.md"
repository = "https://github.com/aOri69/pi-stats.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"

[profile.release]
opt-level = 2
strip = true
lto = true
